念の為100%を適用

--- a/history/index.html
+++ b/history/index.html
@@ -57,6 +57,7 @@
 
         .main {
           display: inline-block;
+          height: 100%;
         }
 
         .history-body::after {
@@ -592,7 +593,8 @@
       <section class="history-top">
         <div class="loopSlide">
           <img src="../images/history/history-slider.png" alt="" /><img
-            src="../images/history/history-slider.png" alt=""
+            src="../images/history/history-slider.png"
+            alt=""
           />
         </div>
 
@@ -635,7 +637,8 @@
       <div class="h-scroll__container">
         <div class="loopSlide">
           <img src="../images/history/history-slider.png" alt="" /><img
-            src="../images/history/history-slider.png" alt=""
+            src="../images/history/history-slider.png"
+            alt=""
           />
         </div>
 
